js/js.translator/testData/incremental/invalidation/addCompanionBlockToParent/lib1/l1.0.kt
var staticInitParent = false

open class Parent {
    val someField: Int = 0
}
